// Vitest Snapshot v1

exports[`Line End > should correctly parse line end in the end of regexp 1`] = `
{
  "body": {
    "end": 2,
    "expressions": [
      {
        "charCode": 97,
        "end": 1,
        "kind": 6,
        "start": 1,
        "type": "simple",
        "value": "a",
      },
      {
        "end": 2,
        "kind": 2,
        "start": 2,
      },
    ],
    "kind": 5,
    "start": 1,
  },
  "end": 3,
  "flags": "",
  "kind": 0,
  "start": 0,
}
`;

exports[`Line End > should correctly parse line end in the middle of regexp 1`] = `
{
  "body": {
    "end": 3,
    "expressions": [
      {
        "charCode": 97,
        "end": 1,
        "kind": 6,
        "start": 1,
        "type": "simple",
        "value": "a",
      },
      {
        "end": 2,
        "kind": 2,
        "start": 2,
      },
      {
        "charCode": 97,
        "end": 3,
        "kind": 6,
        "start": 3,
        "type": "simple",
        "value": "a",
      },
    ],
    "kind": 5,
    "start": 1,
  },
  "end": 4,
  "flags": "",
  "kind": 0,
  "start": 0,
}
`;

exports[`Line End > should correctly parse line end in the start of regexp 1`] = `
{
  "body": {
    "end": 2,
    "expressions": [
      {
        "end": 1,
        "kind": 2,
        "start": 1,
      },
      {
        "charCode": 97,
        "end": 2,
        "kind": 6,
        "start": 2,
        "type": "simple",
        "value": "a",
      },
    ],
    "kind": 5,
    "start": 1,
  },
  "end": 3,
  "flags": "",
  "kind": 0,
  "start": 0,
}
`;
